edit some configuration